--- a/SanthoshPradeep/templates/about.html
+++ b/SanthoshPradeep/templates/about.html
@@ -11,7 +11,7 @@
             <div class="about-text">
                 <h2>Hi there! I'm {{ student.name }}</h2>
                 <p>
-                    I'm a dedicated computer science student currently enrolled at 
+                    I'm a dedicated Artificial Intelligence and Data Science student currently enrolled at 
                     <strong>{{ student.college }}</strong>, pursuing my engineering degree from 
                     {{ student.academic_period }}. My journey in technology began with a curiosity 
                     about how things work, and it has evolved into a passion for creating meaningful 
@@ -74,4 +74,5 @@
     </div>
 </section>
 {% endblock %}
+
 
