--- a/SanthoshPradeep/templates/index.html
+++ b/SanthoshPradeep/templates/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="intro-text">
                 <h1 class="intro-title">Hello, I'm <span class="highlight">{{ student.name }}</span></h1>
-                <p class="intro-subtitle">Computer Science Student</p>
+                <p class="intro-subtitle">Artificial Intelligence and Data Science Student</p>
                 <p class="intro-description">
                     Welcome to my portfolio! I'm a passionate student currently pursuing my engineering degree 
                     at <strong>{{ student.college }}</strong>. My academic journey spans from {{ student.academic_period }}, 
@@ -68,4 +68,5 @@
     </div>
 </section>
 {% endblock %}
+
 
