--- a/SanthoshPradeep/templates/resume.html
+++ b/SanthoshPradeep/templates/resume.html
@@ -46,7 +46,7 @@
             <div class="resume-section-block">
                 <h2><i class="fas fa-graduation-cap"></i> Education</h2>
                 <div class="education-entry">
-                    <h3>Bachelor of Engineering in Computer Science</h3>
+                    <h3>Bachelor of Engineering in Artificial Intelligence and Data Science</h3>
                     <p class="institution">{{ student.college }}</p>
                     <p class="period">{{ student.academic_period }} | Expected Graduation: 2027</p>
                     <p>Currently pursuing undergraduate degree with focus on software engineering, 
@@ -113,4 +113,5 @@ function downloadResume() {
 }
 </script>
 {% endblock %}
+
 
