--- a/SanthoshPradeep/templates/index.html
+++ b/SanthoshPradeep/templates/index.html
@@ -10,7 +10,7 @@
                 <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="{{ student.name }}" id="profileImage">
                 <div class="image-placeholder" id="imagePlaceholder">
                     <i class="fas fa-user"></i>
-                    <p>Add your photo</p>
+                    <p>Santhosh Pradeep</p>
                 </div>
             </div>
             <div class="intro-text">
@@ -68,5 +68,6 @@
     </div>
 </section>
 {% endblock %}
+
 
 
